# LogisticRegression

./: CMakeLists.txt  LogisticRegression.cpp  LogisticRegression_learn.cpp  LogisticRegression_learn_hogbatch.cpp  LogisticRegression_learn_hogwild.cpp  LogisticRegression_learn_minibatch.cpp  Makefile  test.cpp
cmake/: get_eigen.cmake.in  misc.cmake
include/: LogisticRegression.h
